--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,9 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.jongor_software.android.sunshine.DetailActivity$PlaceholderFragment">
+    tools:context="com.jongor_software.android.sunshine.DetailActivity.DetailFragment">
 
-    <TextView android:id="@+id/forecast_detail" 
+    <TextView android:id="@+id/forecast_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
