--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="grey">#CCCCCCCC</color>
     <color name="sunshine_light_blue">#FF64C2F4</color>
+    <color name="sunshine_blue">#FF1CA8F4</color>
+    <color name="sunshine_dark_blue">#0288D1</color>
 </resources>
