--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -12,10 +12,13 @@
     <FrameLayout
         android:layout_width="60dp"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/list_item_icon"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
     </FrameLayout>
 
     <LinearLayout
@@ -44,12 +47,14 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_weight="5"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
         <TextView
             android:id="@+id/list_item_high_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:textAppearance="?android:textAppearanceLarge" />
 
@@ -57,6 +62,7 @@
             android:id="@+id/list_item_low_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="sans-serif-condensed"
             android:textAppearance="?android:textAppearanceSmall" />
     </LinearLayout>
