--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="sunshine_light_blue">#FF64C2F4</color>
     <color name="sunshine_blue">#FF1CA8F4</color>
     <color name="sunshine_dark_blue">#0288D1</color>
+    <color name="white">#FFFFFF</color>
 </resources>
