--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="sunshine_blue">#FF1CA8F4</color>
     <color name="sunshine_dark_blue">#0288D1</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey_700">#646464</color>
+    <color name="black">#000000</color>
 </resources>
